c4prj2_input/grade.txt
Grading at Sat Aug  1 12:00:40 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:37:62: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
        if(!isdigit(first)||first!='K'&&first!='A'&&first!='Q'&&first!='J')
                                                              ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
